--- a/sampleinputlogin.html
+++ b/sampleinputlogin.html
@@ -35,6 +35,7 @@
  <div class="parent">   
  <div class="main">
  <h2>Login page</h2>
+ <h2>Login page</h2>
  <input type="text" placeholder="username">
  <input type="email" placeholder="email">
  <input type="password" placeholder="password">
