--- a/wonderla.html
+++ b/wonderla.html
@@ -10,7 +10,7 @@
     <div class="scrolling-container">
         <div class="scrolling-content">
             <div class="text-item">
-                Wonderla Bhubaneswar is now open! 
+                Wonderla Kochi is now open! 
                 <a class="btn" href="">SHAHOOFA</a>
             </div>
             <div class="text-item">
@@ -19,7 +19,7 @@
             </div>
             <div class="text-item">
                 Wonderla Resort - Book 3 days in advance and get 10% off on Weekdays &amp; 
-                <a href="">SHAHOOFA</a> 
+                
                 <a class="btn" href="">BOOK NOW</a>
             </div>
         </div>
